# cmake-project-template

src/: CMakeLists.txt  main.cpp  main.h
src/random_numbers/: CMakeLists.txt  random.cpp  random.h
